--- a/.github/workflows/deploy-hugo.yml
+++ b/.github/workflows/deploy-hugo.yml
@@ -20,19 +20,19 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4 # Ensure this is v4 or later
         with:
           submodules: recursive # Checkout submodules (for themes)
           fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
 
       - name: Set up Hugo
-        uses: peaceiris/actions-hugo@v3 # Use a popular action to set up Hugo
+        uses: peaceiris/actions-hugo@v3 # v3 is current stable, or check for v4 if available
         with:
           hugo-version: 'latest' # You can specify a version, e.g., '0.128.0'
           extended: true # Use the extended version of Hugo (for Sass/SCSS)
 
       - name: Cache Hugo modules and build cache
-        uses: actions/cache@v4
+        uses: actions/cache@v4 # Ensure this is v4 or later
         with:
           path: ${{ runner.temp }}/hugo_cache # Cache Hugo's build directory
           key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.sum') }}
@@ -43,19 +43,19 @@ jobs:
         run: hugo --minify # Build your Hugo site, minify output
         env:
           HUGO_ENVIRONMENT: production # Set Hugo environment to production
-          HUGO_BASEURL: "https://liz-w-kariuki.github.io/stephen-site/" 
+          HUGO_BASEURL: "https://liz-w-kariuki.github.io/stephen-site/" # **IMPORTANT: Replace with your actual GitHub Pages URL**
 
       - name: Setup Pages
-        uses: actions/configure-pages@v5 # Configure GitHub Pages environment
+        uses: actions/configure-pages@v5 # **UPDATE THIS TO v5 or later**
         id: pages
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4 # Upload the public directory as an artifact
+        uses: actions/upload-pages-artifact@v3 # **UPDATE THIS TO v3 or later**
         with:
           path: ./public # Path to your generated static site
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4 # Deploy the artifact to GitHub Pages
+        uses: actions/deploy-pages@v4 # **UPDATE THIS TO v4 or later**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is automatically provided
