--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://www.hugobricks.preview.usecue.com
+baseURL: https://liz-w-kariuki.github.io/stephen-site/
 theme: hugobricks
 defaultContentLanguage: en
 assetDir: static
