--- a/.github/workflows/deploy-hugo.yml
+++ b/.github/workflows/deploy-hugo.yml
@@ -31,18 +31,18 @@ jobs:
           hugo-version: 'latest' # You can specify a version, e.g., '0.128.0'
           extended: true # Use the extended version of Hugo (for Sass/SCSS)
 
-      # --- NEW DIAGNOSTIC STEP ---
-      - name: Show Hugo base URL and config
+    # --- NEW DIAGNOSTIC STEP (REVISED) ---
+      - name: Show Hugo base URL and full config
         run: |
           echo "--- Hugo config output ---"
-          hugo config | grep 'baseURL'
+          hugo config # Removed grep to see full output
           echo "--- HUGO_BASEURL environment variable ---"
           echo "HUGO_BASEURL: ${{ env.HUGO_BASEURL }}"
+        working-directory: './' # Explicitly set working directory to repository root
         env:
-          # IMPORTANT: Ensure this matches the HUGO_BASEURL in your 'Build Hugo site' step
           HUGO_ENVIRONMENT: production
-          HUGO_BASEURL: "https://liz-w-kariuki.github.io/stephen-site/" # <--- MAKE SURE THIS IS EXACTLY CORRECT
-      # --- END NEW DIAGNOSTIC STEP ---  
+          HUGO_BASEURL: "https://liz-w-kariuki.github.io/stephen-site/" # Ensure this matches your actual URL
+      # --- END DIAGNOSTIC STEP ---  
 
       - name: Cache Hugo modules and build cache
         uses: actions/cache@v4 # Ensure this is v4 or later
