--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://liz-w-kariuki.github.io/stephen-site/ 
+baseURL: https://liz-w-kariuki.github.io/ 
 theme: hugobricks
 defaultContentLanguage: en
 assetDir: static
